[gd_scene load_steps=8 format=2]

[ext_resource path="res://Title_screen/SettingGameScreen.gd" type="Script" id=1]
[ext_resource path="res://Font/pixellegacy.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Music&Sound/1.ogg" type="AudioStream" id=4]
[ext_resource path="res://UI/pressedoption.png" type="Texture" id=5]
[ext_resource path="res://UI/hoveroption.png" type="Texture" id=6]
[ext_resource path="res://UI/option.png" type="Texture" id=7]

[node name="SettingGameScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 240.0
margin_bottom = 137.0
color = Color( 0, 0.0784314, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 102.468
margin_top = 14.305
margin_right = 146.468
margin_bottom = 28.305
custom_fonts/font = ExtResource( 3 )
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option" type="HBoxContainer" parent="."]
margin_left = 19.0868
margin_top = 25.7551
margin_right = 222.087
margin_bottom = 128.755
__meta__ = {
"_edit_use_anchors_": false
}

[node name="column" type="VBoxContainer" parent="option"]
margin_right = 57.0
margin_bottom = 102.0
alignment = 1

[node name="Music" type="CheckBox" parent="option/column"]
margin_top = 11.0
margin_right = 57.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="Full Screen" type="CheckBox" parent="option/column"]
margin_top = 39.0
margin_right = 57.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 2 )
text = "Full Screen"

[node name="VFX" type="CheckBox" parent="option/column"]
margin_top = 67.0
margin_right = 57.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "VFX"

[node name="OST" type="AudioStreamPlayer2D" parent="option/column"]
stream = ExtResource( 4 )

[node name="back" type="TextureButton" parent="."]
margin_left = 153.782
margin_top = 103.53
margin_right = 210.782
margin_bottom = 111.53
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back"]
margin_top = -1.0
margin_right = 54.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="option/column/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="option/column/Full Screen" to="." method="_on_Full_Screen_toggled"]
[connection signal="toggled" from="option/column/VFX" to="." method="_on_VFX_toggled"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
